fix(css): broken css after dsfr update

--- a/app/javascript/stylesheets/dsfr_overrides.scss
+++ b/app/javascript/stylesheets/dsfr_overrides.scss
@@ -1,5 +1,5 @@
 .reset-dsfr-overrides {
-  a {
+  a:not(.dropdown-toggle) {
     &::after {
       display: none;
     }
